Fix extra scrollbar

--- a/WappChatAnalyzer/WappChatAnalyzer-frontend/src/app/pages/home/home.component.css
+++ b/WappChatAnalyzer/WappChatAnalyzer-frontend/src/app/pages/home/home.component.css
@@ -14,8 +14,8 @@
     z-index: 100;
     display: flex;
     justify-content: flex-end;
-    padding: 20px;
-    margin: -20px;
+    padding: 10px;
+    margin: -10px;
     margin-bottom: 5px;
     background-color: #fff7f4;
 }
